--- a/docs/_config.yaml
+++ b/docs/_config.yaml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
-title: 信息技术学习笔记分享
-description: 来自一个热爱信息技术学生的个人笔记
+title: 200多本把妹学电子书的读书笔记
+#description: 约炮教程
 page_excerpts: true
