--- a/docs/_config.yaml
+++ b/docs/_config.yaml
@@ -2,4 +2,5 @@ theme: jekyll-theme-cayman
 title: 200多本把妹学电子书的读书笔记
 #description: 约炮教程
 page_excerpts: true
-show_downloads: false
+show_downloads: true
+layouts: ./_layouts
